# analytics_consulting

./: README.md  data6900_sp2026_v2.md  deliverables.md  syllabus.md  syllabus_6900_sp2026.md  syllabus_chi.md  syllabus_v2.md  syllabus_v3.md
code_projects/: llm_chain_requirements.txt
code_projects/D4K_test/: .cursorrules  README.md  code_test.code-workspace  debugger-v2.py  debugger.py  feature_selector.py  genAI_intro.md  input_data.py
code_projects/D4K_test/code/: chain.py  further_improved_remove_val.md  improved_remove_val.md  json2md.py  poc_context_filled_prompts.txt  poc_prompt_results.txt  recursive_reflect.txt  remove_val.txt  remove_val_prompts.txt  test.md  test.py  tutor_chain.py
code_projects/D4K_test/prompts/: code_tutor.txt  debugger.txt  reflect.txt  remove_val.md  tutor.txt
code_projects/T2SQL-autogen/: get_schema.py  test_db.py  workflow1.py  workflow2.py  workflow3.py
code_projects/T2SQL-autogen/archived/: planner.txt  prompts.json  workflow.jpynb  workflow2-v2.py  workflow2.py  workflow2_test.py  workflow3.py
code_projects/T2SQL-autogen/example_db/: airline.db  airline_example.sql  airline_schema.txt  create_airline.py
code_projects/T2SQL-autogen/example_results/: q1_final_answer.txt  q1_query.txt  (+2 more)
code_projects/T2SQL/t2sql/: README.md  pyproject.toml
code_projects/T2SQL/t2sql/src/t2sql/: crew.py  main.py
code_projects/T2SQL/t2sql/src/t2sql/config/: agents.yaml  tasks.yaml
code_projects/med_buddy/: chinese_summary.md  combine_md.py  combine_md_v2.py  combined_MM.md  report.md  reporting.py  search_test.py  summary.md  test.py
(+31 files in other folders)
