[project]
name = "t2sql"
version = "0.1.0"
description = "t2sql using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
t2sql = "t2sql.main:run"
run_crew = "t2sql.main:run"
train = "t2sql.main:train"
replay = "t2sql.main:replay"
test = "t2sql.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
